--- a/nlp/admin/web/src/app/intents/quality/intent-qa.component.html
+++ b/nlp/admin/web/src/app/intents/quality/intent-qa.component.html
@@ -17,37 +17,38 @@
 <div>
 
   <div id="intent-qa-update-container">
-    <label for="minOccurrence">Min of Occurrence</label>
-    <input id="minOccurrence" type="number" [(ngModel)]="minOccurrence"/>
-    <button md-button (click)="updateContent()" md-tooltip="Refresh">
-      <md-icon>refresh</md-icon>
+    <mat-form-field>
+      <input matInput placeholder="Filter Occurrences Less Than" type="number" [(ngModel)]="minOccurrences" (keyup.enter)="updateContent()"/>
+    </mat-form-field>
+    <button mat-button (click)="updateContent()" matTooltip="Refresh">
+      <mat-icon>refresh</mat-icon>
     </button>
   </div>
 
-  <md-table #table [dataSource]="dataSource">
+  <mat-table #table [dataSource]="dataSource">
 
-    <ng-container mdColumnDef="mainIntent">
-      <md-header-cell *mdHeaderCellDef> Maint Intent</md-header-cell>
-      <md-cell *mdCellDef="let row"> {{row.mainIntent}}</md-cell>
+    <ng-container matColumnDef="intent1">
+      <mat-header-cell *matHeaderCellDef>Intent 1</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{row.intent1}}</mat-cell>
     </ng-container>
 
-    <ng-container mdColumnDef="secondaryIntent">
-      <md-header-cell *mdHeaderCellDef> Secondary Intent</md-header-cell>
-      <md-cell *mdCellDef="let row"> {{row.secondaryIntent}}</md-cell>
+    <ng-container matColumnDef="intent2">
+      <mat-header-cell *matHeaderCellDef>Intent 2</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{row.intent2}}</mat-cell>
     </ng-container>
 
-    <ng-container mdColumnDef="occurrence">
-      <md-header-cell *mdHeaderCellDef> Occurrence</md-header-cell>
-      <md-cell *mdCellDef="let row"> {{row.occurrence}}</md-cell>
+    <ng-container matColumnDef="occurrences">
+      <mat-header-cell *matHeaderCellDef>Occurrences</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{row.occurrences}}</mat-cell>
     </ng-container>
 
-    <ng-container mdColumnDef="average">
-      <md-header-cell *mdHeaderCellDef> Average Difference</md-header-cell>
-      <md-cell *mdCellDef="let row"> {{row.average}}</md-cell>
+    <ng-container matColumnDef="average">
+      <mat-header-cell *matHeaderCellDef>Average Diff</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{row.average | number : '1.0-3'}}</mat-cell>
     </ng-container>
 
-    <md-header-row *mdHeaderRowDef="displayedColumns"></md-header-row>
-    <md-row *mdRowDef="let row; columns: displayedColumns;"></md-row>
-  </md-table>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
 
 </div>
