nlp admin: display last sentence update date
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.css
+++ b/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.css
@@ -64,3 +64,10 @@
 .validate {
   margin-left: 20px;
 }
+
+.lastUpdate {
+  float: right;
+  font-size: x-small;
+  position: relative;
+  top: 20px;
+}
