admin: add round corner for entities
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/intents/intents.component.css
+++ b/nlp/admin/web/src/app/intents/intents.component.css
@@ -51,3 +51,16 @@
 .actions {
   white-space: nowrap;
 }
+
+.entity {
+  white-space:nowrap;
+}
+
+.status {
+  border-radius: 25px;
+  padding: 8px;
+}
+
+.removeEntity {
+  transform: translateX(-8px);
+}
