--- a/bot/admin/web/src/app/bot-admin-app.component.css
+++ b/bot/admin/web/src/app/bot-admin-app.component.css
@@ -19,6 +19,7 @@
   min-width: 100px;
   overflow-y: visible;
   background-color:#fafafa;
+  position:fixed;
 }
 
 .tock-menu-button {
@@ -69,3 +70,9 @@
 .main {
   min-height: 80vh;
 }
+
+.active-link {
+    background-color: silver;
+}
+
+
