--- a/nlp/admin/web/src/app/nlp-admin-app.component.html
+++ b/nlp/admin/web/src/app/nlp-admin-app.component.html
@@ -21,9 +21,9 @@
         <mat-icon aria-hidden="true" matListIcon svgIcon="logo"></mat-icon>
         <h3>Tock</h3>
       </mat-list-item>
-      <a *ngIf="state.hasRole(UserRole.admin)" mat-list-item routerLink="/applications">Applications</a>
-      <a *ngIf="state.hasRole(UserRole.nlpUser)" mat-list-item routerLink="/nlp/inbox">NLP</a>
-      <a *ngIf="state.hasRole(UserRole.nlpUser)" mat-list-item routerLink="/quality/log-stats">NLP QA</a>
+      <a *ngIf="state.hasRole(UserRole.admin)" mat-list-item routerLink="/applications" routerLinkActive="active-link">Applications</a>
+      <a *ngIf="state.hasRole(UserRole.nlpUser)" mat-list-item routerLink="/nlp/inbox" routerLinkActive="active-link">NLP</a>
+      <a *ngIf="state.hasRole(UserRole.nlpUser)" mat-list-item routerLink="/quality/log-stats" routerLinkActive="active-link">NLP QA</a>
     </mat-nav-list>
   </mat-sidenav>
 
