--- a/nlp/admin/web/src/app/sentences-scroll/sentences-scroll.component.html
+++ b/nlp/admin/web/src/app/sentences-scroll/sentences-scroll.component.html
@@ -18,7 +18,7 @@
 
 <div class="paginator">
   <div class="header" *ngIf="total === 0">
-    <h4 class="title">{{title}} is empty!</h4>
+    <h4 class="title">No Data</h4>
     <button mat-button (click)="refresh()" class="button">
       <mat-icon>refresh</mat-icon>
     </button>
