--- a/nlp/admin/web/src/app/intents/intents.component.html
+++ b/nlp/admin/web/src/app/intents/intents.component.html
@@ -15,26 +15,40 @@
   -->
 
 <mat-card>
+  <mat-card-subtitle>The <span class="default_category">default</span> intent category is expanded by default.</mat-card-subtitle>
   <mat-card-content>
-    <table border="1" class="table">
-      <thead>
-      <th>Intent</th>
-      <th>Entities</th>
-      <th>Shared Intents</th>
-      <th>Mandatory States</th>
-      <th>Actions</th>
-      </thead>
-      <tr *ngFor="let i of state.currentIntents | async">
-        <td>
-          <span class="intent_name">{{i.name}}</span>
-          <div *ngIf="state.intentExistsInOtherApplication(i.name)"
-               matTooltip="This intent is shared between at least one other application. All changes to the intent will also affect the other applications that use this intent."
-               matTooltipPosition="right">
-            <span class="shared_application_label">Multi-application intent</span>
-            <mat-icon>share</mat-icon>
-          </div>
-        </td>
-        <td>
+    <mat-tree [treeControl]="treeControl" [dataSource]="intentsCategories">
+      <mat-tree-node *matTreeNodeDef="let node" class="tree" [class.tree-open]="treeControl.isExpanded(node)">
+        <button mat-icon-button matTreeNodeToggle
+                [attr.aria-label]="'toggle ' + node.category">
+          <mat-icon class="mat-icon-rtl-mirror">
+            {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+          </mat-icon>
+        </button>
+        <span class="category" matTreeNodeToggle>{{node.category}}</span>
+        <table *ngIf="treeControl.isExpanded(node)" border="1" class="table">
+          <thead>
+          <th>Intent</th>
+          <th>Id</th>
+          <th>Description</th>
+          <th>Entities</th>
+          <th>Shared Intents</th>
+          <th>Mandatory States</th>
+          <th>Actions</th>
+          </thead>
+          <tr *ngFor="let i of node.intents">
+            <td>
+              <span class="intent_name">{{i.intentLabel()}}</span>
+              <div *ngIf="state.intentExistsInOtherApplication(i.name)"
+                   matTooltip="This intent is shared between at least one other application. All changes to the intent will also affect the other applications that use this intent."
+                   matTooltipPosition="right">
+                <span class="shared_application_label">Multi-application intent</span>
+                <mat-icon>share</mat-icon>
+              </div>
+            </td>
+            <td class="intent_id"><span >{{i.name}}</span></td>
+            <td class="intent_description">{{i.description}}</td>
+            <td>
           <span *ngFor="let e of i.entities">
           <span class="entity">
           <mat-icon [style.color]="e.entityColor" class="entity_icon">extension</mat-icon>
@@ -46,63 +60,68 @@
           </span>
           &nbsp;
           </span>
-        </td>
-        <td class="shared">
-          <mat-select *ngIf="!state.intentExistsInOtherApplication(i.name)"
-                      class="intent"
-                      placeholder="Add shared intent"
-                      (selectionChange)="addSharedIntent(i, $event.value)">
-            <mat-option *ngFor="let intent of state.currentIntents | async" [value]="intent._id">
-              {{intent.name}}
-            </mat-option>
-          </mat-select>
-          <div *ngIf="i.sharedIntents.length !== 0" class="shared_list">
-            <mat-chip-list *ngIf="!state.intentExistsInOtherApplication(i.name)"
-                           matTooltip="Shared intent - click to remove">
-              <mat-chip *ngFor="let intentId of i.sharedIntents" color="accent" selected="true"
-                        (click)="removeSharedIntent(i, intentId)">
-                {{state.findIntentById(intentId)?.name}}
-              </mat-chip>
-            </mat-chip-list>
-            <mat-chip-list *ngIf="state.intentExistsInOtherApplication(i.name)" matTooltip="Shared intent">
-              <mat-chip *ngFor="let intentId of i.sharedIntents" color="accent" selected="true">
-                {{state.findIntentById(intentId)?.name}}
-              </mat-chip>
-            </mat-chip-list>
-          </div>
-        </td>
-        <td class="states">
-          <button *ngIf="!state.intentExistsInOtherApplication(i.name)" mat-button (click)="addState(i)">
-            <mat-icon>add_box</mat-icon>
-            Add state
-          </button>
-          <div *ngIf="i.mandatoryStates.length !== 0" class="shared_list">
-            <mat-chip-list *ngIf="!state.intentExistsInOtherApplication(i.name)"
-                           matTooltip="Mandatory states - click to delete">
-              <br>
-              <mat-chip *ngFor="let s of i.mandatoryStates" color="accent" selected="true" (click)="removeState(i, s)">
-                {{s}}
-              </mat-chip>
-            </mat-chip-list>
-            <mat-chip-list *ngIf="state.intentExistsInOtherApplication(i.name)" matTooltip="Mandatory states">
-              <br>
-              <mat-chip *ngFor="let s of i.mandatoryStates" color="accent" selected="true">
-                {{s}}
-              </mat-chip>
-            </mat-chip-list>
-          </div>
-        </td>
-        <td class="actions">
-          <button *ngIf="state.hasRole(UserRole.admin)" (click)="downloadSentencesDump(i)" mat-icon-button
-                  matTooltip="Download a sentences dump">
-            <mat-icon>cloud_download</mat-icon>
-          </button>
-          <button mat-icon-button (click)="deleteIntent(i)" matTooltip="Delete the intent {{i.name}}">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </td>
-      </tr>
-    </table>
+            </td>
+            <td class="shared">
+              <mat-select *ngIf="!state.intentExistsInOtherApplication(i.name)"
+                          class="intent"
+                          placeholder="Add shared intent"
+                          (selectionChange)="addSharedIntent(i, $event.value)">
+                <mat-optgroup *ngFor="let category of state.currentIntentsCategories | async" [label]="category.category">
+                  <mat-option *ngFor="let intent of category.intents" [value]="intent._id">
+                    {{intent.intentLabel()}}
+                  </mat-option>
+                </mat-optgroup>
+              </mat-select>
+              <div *ngIf="i.sharedIntents.length !== 0" class="shared_list">
+                <mat-chip-list *ngIf="!state.intentExistsInOtherApplication(i.name)"
+                               matTooltip="Shared intent - click to remove">
+                  <mat-chip *ngFor="let intentId of i.sharedIntents" color="accent" selected="true"
+                            (click)="removeSharedIntent(i, intentId)">
+                    {{state.findIntentById(intentId)?.name}}
+                  </mat-chip>
+                </mat-chip-list>
+                <mat-chip-list *ngIf="state.intentExistsInOtherApplication(i.name)" matTooltip="Shared intent">
+                  <mat-chip *ngFor="let intentId of i.sharedIntents" color="accent" selected="true">
+                    {{state.findIntentById(intentId)?.name}}
+                  </mat-chip>
+                </mat-chip-list>
+              </div>
+            </td>
+            <td class="states">
+              <button *ngIf="!state.intentExistsInOtherApplication(i.name)" mat-button (click)="addState(i)">
+                <mat-icon>add_box</mat-icon>
+                Add state
+              </button>
+              <div *ngIf="i.mandatoryStates.length !== 0" class="shared_list">
+                <mat-chip-list *ngIf="!state.intentExistsInOtherApplication(i.name)"
+                               matTooltip="Mandatory states - click to delete">
+                  <br>
+                  <mat-chip *ngFor="let s of i.mandatoryStates" color="accent" selected="true" (click)="removeState(i, s)">
+                    {{s}}
+                  </mat-chip>
+                </mat-chip-list>
+                <mat-chip-list *ngIf="state.intentExistsInOtherApplication(i.name)" matTooltip="Mandatory states">
+                  <br>
+                  <mat-chip *ngFor="let s of i.mandatoryStates" color="accent" selected="true">
+                    {{s}}
+                  </mat-chip>
+                </mat-chip-list>
+              </div>
+            </td>
+            <td class="actions">
+              <button mat-icon-button color="primary" matTooltip="Edit the intent" (click)="updateIntent(i)"><mat-icon>edit</mat-icon></button>
+              <button *ngIf="state.hasRole(UserRole.admin)" (click)="downloadSentencesDump(i)" mat-icon-button
+                      matTooltip="Download a sentences dump">
+                <mat-icon>cloud_download</mat-icon>
+              </button>
+              <button mat-icon-button (click)="deleteIntent(i)" matTooltip="Delete the intent {{i.name}}">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </td>
+          </tr>
+        </table>
+      </mat-tree-node>
+    </mat-tree>
   </mat-card-content>
 </mat-card>
 
