resolves #348 nlp admin: add upload dump progress bar
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/applications/application-upload/application-upload.component.html
+++ b/nlp/admin/web/src/app/applications/application-upload/application-upload.component.html
@@ -16,6 +16,7 @@
 
 <mat-card *ngIf="configuration">
   <mat-card-title>Upload a Dump</mat-card-title>
+  <mat-card-subtitle><mat-progress-bar mode="indeterminate" *ngIf="uploading"></mat-progress-bar></mat-card-subtitle>
   <mat-card-content>
     <div *ngIf="!report">
 
