add progress bar & spinner in admin
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/sentences-scroll/sentences-scroll.component.html
+++ b/nlp/admin/web/src/app/sentences-scroll/sentences-scroll.component.html
@@ -52,7 +52,11 @@
             matTooltip="Switch to table view">
       <mat-icon>grid_on</mat-icon>
     </button>
-  </div>
+
+    <div class="loader-parent">
+    <mat-progress-spinner class="loader" mode="indeterminate" *ngIf="loading" [diameter]="28"></mat-progress-spinner>
+    </div>
+    </div>
 
   <mat-paginator #paginator
                 [length]="total"
