--- a/bot/admin/web/src/app/monitoring/users/user-timelines.component.html
+++ b/bot/admin/web/src/app/monitoring/users/user-timelines.component.html
@@ -15,109 +15,112 @@
   -->
 
 <div class="users">
-  <div *ngIf="total !== -1">
   <span class="searchForm">
-     <mat-card>
+    <mat-card>
     <mat-card-content class="filter">
       <mat-form-field>
-        <input matInput [matDatepicker]="after" placeholder="Modified after" [(ngModel)]="filter.from" (dateChange)="changeAfter()">
+        <input matInput [matDatepicker]="after" placeholder="Modified after" [(ngModel)]="filter.from"
+               (dateChange)="changeAfter()">
         <mat-datepicker-toggle matSuffix [for]="after"></mat-datepicker-toggle>
       </mat-form-field>
       <mat-datepicker #after (selectedChanged)="changeAfter()"></mat-datepicker>
 
       <mat-form-field>
-        <input matInput [matDatepicker]="before" placeholder="Modified before" [(ngModel)]="filter.to" (dateChange)="changeBefore()">
+        <input matInput [matDatepicker]="before" placeholder="Modified before" [(ngModel)]="filter.to"
+               (dateChange)="changeBefore()">
         <mat-datepicker-toggle matSuffix [for]="before"></mat-datepicker-toggle>
       </mat-form-field>
       <mat-datepicker #before (selectedChanged)="changeBefore()"></mat-datepicker>
       &nbsp;
       <mat-chip-list *ngIf="filter.flags.length !== 0">
               <mat-chip *ngFor="let f of filter.flags"
-                       [selected]="true"
-                       color="primary"
-                       (click)="removeFlag(f)"
-                       matTooltip="Remove filter {{f}}">{{f}}
+                        [selected]="true"
+                        color="primary"
+                        (click)="removeFlag(f)"
+                        matTooltip="Remove filter {{f}}">{{f}}
               </mat-chip>
     </mat-chip-list>
     </mat-card-content>
   </mat-card>
 
-  <h1 *ngIf="total === 0">No user yet!
+  <h1 *ngIf="!loading && total <= 0">No user yet!
     <button mat-button (click)="refresh()">
       <mat-icon>refresh</mat-icon>
     </button>
   </h1>
-  <h1 *ngIf="total !== 0"><span *ngIf="total > 10">Estimated</span> users : {{total}}
+  <h1 *ngIf="total > 0"><span *ngIf="total > 10">Estimated</span> users : {{total}}
     <button mat-button (click)="refresh()">
       <mat-icon>refresh</mat-icon>
     </button>
   </h1>
-    </span>
-    <p></p>
-    <div
-      infinite-scroll
-      [infiniteScrollDistance]="2"
-      [infiniteScrollThrottle]="300"
-      (scrolled)="onScroll()">
-      <div *ngFor="let user of data">
-        <mat-card>
-          <mat-card-header>
-            <img mat-card-avatar
-                 src="{{user.userPreferences.picture ? user.userPreferences.picture : '/assets/images/people.png'}}"
-                 alt="{{user.userPreferences.firstName}} {{user.userPreferences.lastName}}">
-            <mat-card-title> {{user.userPreferences.firstName}} {{user.userPreferences.lastName}}
-              <span *ngIf="user.botConfiguration">[{{user.botConfiguration.name}} - {{user.botConfiguration.connectorType.id}}]</span>
-              <span *ngIf="user.userPreferences.locale">({{user.userPreferences.locale}})</span>
-            </mat-card-title>
-            <mat-card-subtitle>
-              <span class="lastUpdateDate"> created the {{user.userState.creationDate | amDateFormat: 'YYYY-MM-DD'}} - updated {{user.lastUpdateDate | amTimeAgo}} </span>
-            </mat-card-subtitle>
-          </mat-card-header>
-          <mat-card-content>
-            <span *ngIf="user.lastActionText" class="lastActionText"> &quot; {{user.lastActionText}} &quot;</span>
-            <button *ngIf="!user.displayDialogs" mat-icon-button matTooltip="Display dialog"
-                    color="primary" (click)="loadDialog(user)">
-              <mat-icon>forum</mat-icon>
+  </span>
+  <p></p>
+  <div
+    *ngIf="total !== -1"
+    infinite-scroll
+    [infiniteScrollDistance]="2"
+    [infiniteScrollThrottle]="300"
+    (scrolled)="onScroll()">
+
+    <div *ngFor="let user of data">
+      <mat-card>
+        <mat-card-header>
+          <img mat-card-avatar
+               src="{{user.userPreferences.picture ? user.userPreferences.picture : '/assets/images/people.png'}}"
+               alt="{{user.userPreferences.firstName}} {{user.userPreferences.lastName}}">
+          <mat-card-title> {{user.userPreferences.firstName}} {{user.userPreferences.lastName}}
+            <span *ngIf="user.botConfiguration">[{{user.botConfiguration.name}} - {{user.botConfiguration.connectorType.id}}]</span>
+            <span *ngIf="user.userPreferences.locale">({{user.userPreferences.locale}})</span>
+          </mat-card-title>
+          <mat-card-subtitle>
+            <span class="lastUpdateDate"> created the {{user.userState.creationDate | amDateFormat: 'YYYY-MM-DD'}} - updated {{user.lastUpdateDate | amTimeAgo}} </span>
+          </mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+          <span *ngIf="user.lastActionText" class="lastActionText"> &quot; {{user.lastActionText}} &quot;</span>
+          <button *ngIf="!user.displayDialogs" mat-icon-button matTooltip="Display dialog"
+                  color="primary" (click)="loadDialog(user)">
+            <mat-icon>forum</mat-icon>
+          </button>
+          <button *ngIf="user.displayDialogs" mat-icon-button matTooltip="Hide dialog" color="accent"
+                  (click)="closeDialog(user)">
+            <mat-icon>remove_from_queue</mat-icon>
+          </button>
+          <mat-chip-list *ngIf="user.userState.flags.length !== 0">
+            <mat-chip *ngFor="let f of user.userState.flags"
+                      [selected]="containsFlag(f)"
+                      color="accent"
+                      (click)="toggleFlag(f)"
+                      matTooltip="Filter by flag {{f}}">{{f}}
+            </mat-chip>
+          </mat-chip-list>
+          <div *ngIf="user.displayDialogs && !user.userDialog">No dialog found</div>
+        </mat-card-content>
+      </mat-card>
+      <tock-display-dialog
+        class="dialog"
+        *ngIf="user.displayDialogs && user.userDialog"
+        [dialog]="user.userDialog">
+        <div *ngIf="user.userDialog.actions.length === 0">No dialog</div>
+        <div *ngIf="user.userDialog.actions.length !== 0">
+          <div *ngIf="user.testPlans && user.testPlans.length !== 0">
+            <mat-select #selectedPlan
+                        placeholder="Select a Test Plan"
+                        class="select-plan">
+              <mat-option *ngFor="let plan of user.testPlans"
+                          [value]="plan._id">{{ plan.name }}
+              </mat-option>
+            </mat-select>
+            <button (click)="addDialogToTestPlan(selectedPlan?.selected?.value, user.userDialog)"
+                    mat-button color="primary">
+              <mat-icon>add_shopping_cart</mat-icon>
+              Add dialog to Test Plan
             </button>
-            <button *ngIf="user.displayDialogs" mat-icon-button matTooltip="Hide dialog" color="accent"
-                    (click)="closeDialog(user)">
-              <mat-icon>remove_from_queue</mat-icon>
-            </button>
-            <mat-chip-list *ngIf="user.userState.flags.length !== 0">
-              <mat-chip *ngFor="let f of user.userState.flags"
-                       [selected]="containsFlag(f)"
-                       color="accent"
-                       (click)="toggleFlag(f)"
-                       matTooltip="Filter by flag {{f}}">{{f}}
-              </mat-chip>
-            </mat-chip-list>
-            <div *ngIf="user.displayDialogs && !user.userDialog">No dialog found</div>
-          </mat-card-content>
-        </mat-card>
-        <tock-display-dialog
-          class="dialog"
-          *ngIf="user.displayDialogs && user.userDialog"
-          [dialog]="user.userDialog">
-          <div *ngIf="user.userDialog.actions.length === 0">No dialog</div>
-          <div *ngIf="user.userDialog.actions.length !== 0">
-            <div *ngIf="user.testPlans && user.testPlans.length !== 0">
-              <mat-select #selectedPlan
-                         placeholder="Select a Test Plan"
-                         class="select-plan">
-                <mat-option *ngFor="let plan of user.testPlans"
-                           [value]="plan._id">{{ plan.name }}
-                </mat-option>
-              </mat-select>
-              <button (click)="addDialogToTestPlan(selectedPlan?.selected?.value, user.userDialog)"
-                      mat-button color="primary">
-                <mat-icon>add_shopping_cart</mat-icon>
-                Add dialog to Test Plan
-              </button>
-            </div>
           </div>
-          <p></p>
-        </tock-display-dialog>
-      </div>
+        </div>
+        <p></p>
+      </tock-display-dialog>
     </div>
   </div>
+  <mat-progress-bar mode="indeterminate" *ngIf="loading"></mat-progress-bar>
 </div>
